force-app/main/default/objects/Marketing_Activity__c/fields/Is_My_Partner_Activity__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Partner_Activity__c</fullName>
    <formula>Partner__r.OwnerId = $User.Id</formula>
    <label>Is My Partner Activity</label>
    <type>Checkbox</type>
</CustomField>