force-app/main/default/objects/Marketing_Activity__c/fields/Legal_mandatories_and_other_reference__c.field-meta.xml
<CustomField>
    <fullName>Legal_mandatories_and_other_reference__c</fullName>
    <inlineHelpText>Any information that is essential for us to know e.g. legal restrictions in a particular market and other specific information</inlineHelpText>
    <label>Legal, Mandatories &amp; Other Reference</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>