force-app/main/default/objects/Marketing_Activity__c/fields/Link_to_Oracle__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Oracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Link to Oracle</label>
    <type>Checkbox</type>
</CustomField>