force-app/main/default/objects/Marketing_Activity__c/fields/Links_to_SharePoint__c.field-meta.xml
<CustomField>
    <fullName>Links_to_SharePoint__c</fullName>
    <label>Links to SharePoint</label>
    <type>Url</type>
</CustomField>