force-app/main/default/objects/Marketing_Activity__c/fields/List_of_Hash_tags_to_be_used__c.field-meta.xml
<CustomField>
    <fullName>List_of_Hash_tags_to_be_used__c</fullName>
    <label>List of Hash tags to be used</label>
    <length>255</length>
    <type>Text</type>
</CustomField>