force-app/main/default/objects/Marketing_Activity__c/fields/MA_OracleSessionId__c.field-meta.xml
<CustomField>
    <fullName>MA_OracleSessionId__c</fullName>
    <label>MA-OracleSessionId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>