force-app/main/default/objects/Marketing_Activity__c/fields/Marketing_Activity_Ref__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity_Ref__c</fullName>
    <displayFormat>MA-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>Marketing Activity Ref</label>
    <type>AutoNumber</type>
</CustomField>