force-app/main/default/objects/Marketing_Activity__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <description>....</description>
    <label>Marketing Campaign</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You cannot link an activity to a &apos;Cancelled&apos;  Campaign.</errorMessage>
        <filterItems>
            <field>Marketing_Campaign__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Marketing_Activities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>