force-app/main/default/objects/Marketing_Activity__c/fields/Marketing_Campaign_Village__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign_Village__c</fullName>
    <formula>Marketing_Campaign__r.Village__r.Name</formula>
    <label>Marketing Campaign Village</label>
    <type>Text</type>
</CustomField>