force-app/main/default/objects/Marketing_Activity__c/fields/Measurement_Description__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Description__c</fullName>
    <inlineHelpText>What does good look like and how will you measure it?</inlineHelpText>
    <label>Measurement Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>