force-app/main/default/objects/Marketing_Activity__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>e.g. Enjoy the luxury of spending much less - up to -70%</inlineHelpText>
    <label>Message</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>