force-app/main/default/objects/Marketing_Activity__c/fields/My_Activity__c.field-meta.xml
<CustomField>
    <fullName>My_Activity__c</fullName>
    <formula>Responsible_Person__r.Id =  $User.Id</formula>
    <label>My Activity (Responsible for)</label>
    <type>Checkbox</type>
</CustomField>