force-app/main/default/objects/Marketing_Activity__c/fields/My_Village_Activity__c.field-meta.xml
<CustomField>
    <fullName>My_Village_Activity__c</fullName>
    <formula>OR(Marketing_Campaign_Village__c =  TEXT($User.Village__c ), $User.Central_Initiative__c = true)</formula>
    <label>My Village Activity</label>
    <type>Checkbox</type>
</CustomField>