force-app/main/default/objects/Marketing_Activity__c/fields/NumberOfActivity__c.field-meta.xml
<CustomField>
    <fullName>NumberOfActivity__c</fullName>
    <label>NumberOfActivitiy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>