force-app/main/default/objects/Marketing_Activity__c/fields/Offer_ID__c.field-meta.xml
<CustomField>
    <fullName>Offer_ID__c</fullName>
    <label>Offer ID (Coniq)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>