force-app/main/default/objects/Marketing_Activity__c/fields/Old_Redemption_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_Redemption_Campaign_ID__c</fullName>
    <label>Old Redemption Campaign ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>