force-app/main/default/objects/Marketing_Activity__c/fields/Online_Offline__c.field-meta.xml
<CustomField>
    <fullName>Online_Offline__c</fullName>
    <formula>IF(   CONTAINS( $Setup.Marketing_Activity_Sub_Channels_Types2__c.Offline__c,  

TEXT(Sub_Channel__c)  )    
,&apos;Offline&apos;, 

IF(  CONTAINS( $Setup.Marketing_Activity_Sub_Channels_Types2__c.Online__c  ,  TEXT(Sub_Channel__c) ) , &apos;Online&apos;,
&apos;NA&apos;
)
    )</formula>
    <inlineHelpText>Shows weather channel is online or offline</inlineHelpText>
    <label>Online/Offline</label>
    <type>Text</type>
</CustomField>