force-app/main/default/objects/Marketing_Activity__c/fields/Oracle_Secondary_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Secondary_Project_Id__c</fullName>
    <description>Text field created to store the project (Marketing Campaig) Id. This way, when the field is populated, the Marketing Activity will run and will send the objects to the Finance system (formula fields wouldn&apos;t trigger the execution of the Apex Trigger)</description>
    <label>Oracle Secondary Project Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>