force-app/main/default/objects/Marketing_Activity__c/fields/Oracle_Secondary_Project_No__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Secondary_Project_No__c</fullName>
    <formula>Marketing_Campaign__r.Oracle_Secondary_Project_No__c</formula>
    <label>[Oracle] Secondary Project No.</label>
    <type>Text</type>
</CustomField>