force-app/main/default/objects/Marketing_Activity__c/fields/Oracle_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Task_Id__c</fullName>
    <label>Oracle Primary Task Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>