force-app/main/default/objects/Marketing_Activity__c/fields/Oracle_Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Task_Number__c</fullName>
    <label>[Oracle] Primary Task Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>