force-app/main/default/objects/Marketing_Activity__c/fields/Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Notes__c</fullName>
    <inlineHelpText>Any other notes relevant to the activity</inlineHelpText>
    <label>Other Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>