force-app/main/default/objects/Marketing_Activity__c/fields/Parent_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Campaign_Name__c</fullName>
    <label>Parent Campaign Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>