force-app/main/default/objects/Marketing_Activity__c/fields/Parent_Group_Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Parent_Group_Marketing_Campaign__c</fullName>
    <formula>Marketing_Campaign__r.Parent_Marketing_Campaign__r.Name</formula>
    <label>Parent TBVSC Brand Marketing Campaign</label>
    <type>Text</type>
</CustomField>