force-app/main/default/objects/Marketing_Activity__c/fields/Partner_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Partner_Campaign__c</fullName>
    <formula>IF(NOT(ISBLANK(Partner__r.Name)),&quot;Partner:&quot; &amp; Partner__r.Name   &amp; &quot; :-&quot; &amp;   Marketing_Campaign__r.Name, &quot;&quot;)</formula>
    <label>Partner Campaign</label>
    <type>Text</type>
</CustomField>