force-app/main/default/objects/Marketing_Activity__c/fields/Performance_Measure__c.field-meta.xml
<CustomField>
    <fullName>Performance_Measure__c</fullName>
    <description>.</description>
    <inlineHelpText>How to measure activity</inlineHelpText>
    <label>Performance Measure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Sub_Channel__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName># Actual Cost</fullName>
            </value>
            <value>
                <fullName># Actual Participants</fullName>
            </value>
            <value>
                <fullName># Articles (print, online, social media)</fullName>
            </value>
            <value>
                <fullName># Bounce Rate</fullName>
            </value>
            <value>
                <fullName># Brand Mentions</fullName>
            </value>
            <value>
                <fullName># Brands engagement</fullName>
            </value>
            <value>
                <fullName># Budget Cost</fullName>
            </value>
            <value>
                <fullName># Contracts</fullName>
            </value>
            <value>
                <fullName># Cost</fullName>
            </value>
            <value>
                <fullName># Emails Bounced</fullName>
            </value>
            <value>
                <fullName># Emails Clicked</fullName>
            </value>
            <value>
                <fullName># Emails Opened</fullName>
            </value>
            <value>
                <fullName># Emails Opted Out</fullName>
            </value>
            <value>
                <fullName># Emails Sent</fullName>
            </value>
            <value>
                <fullName># Emails Skipped</fullName>
            </value>
            <value>
                <fullName># Expected Participants</fullName>
            </value>
            <value>
                <fullName># Footfall</fullName>
            </value>
            <value>
                <fullName># Group Bookings</fullName>
            </value>
            <value>
                <fullName># Guests attended</fullName>
            </value>
            <value>
                <fullName>#Hashtag Mentions</fullName>
            </value>
            <value>
                <fullName># Hashtag Mentions</fullName>
            </value>
            <value>
                <fullName># Interviews</fullName>
            </value>
            <value>
                <fullName># Invitations Sent</fullName>
            </value>
            <value>
                <fullName># Leads</fullName>
            </value>
            <value>
                <fullName># Mails Sent</fullName>
            </value>
            <value>
                <fullName># New Followers</fullName>
            </value>
            <value>
                <fullName># New Partners</fullName>
            </value>
            <value>
                <fullName># New Sign Ups</fullName>
            </value>
            <value>
                <fullName># New Subscribers</fullName>
            </value>
            <value>
                <fullName># New Users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>