force-app/main/default/objects/Marketing_Activity__c/fields/Picklist_Multi_Select__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Multi_Select__c</fullName>
    <label>Posting Originator</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bicester</fullName>
            </value>
            <value>
                <fullName>Fidenza</fullName>
            </value>
            <value>
                <fullName>Inglostadt</fullName>
            </value>
            <value>
                <fullName>Kildare</fullName>
            </value>
            <value>
                <fullName>La Roca</fullName>
            </value>
            <value>
                <fullName>Las Rozas</fullName>
            </value>
            <value>
                <fullName>La Vallee</fullName>
            </value>
            <value>
                <fullName>Maasmechelen</fullName>
            </value>
            <value>
                <fullName>Wertheim</fullName>
            </value>
            <value>
                <fullName>TBVSC Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>