force-app/main/default/objects/Marketing_Activity__c/fields/Planned_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Send_Date__c</fullName>
    <inlineHelpText>When is the email planned to be sent?</inlineHelpText>
    <label>Planned Send Date</label>
    <type>Date</type>
</CustomField>