force-app/main/default/objects/Marketing_Activity__c/fields/Prescribed_by_Group__c.field-meta.xml
<CustomField>
    <fullName>Prescribed_by_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Logged in user based on TBVSC Brand credentials will default the check box to true</description>
    <label>Prescribed by TBVSC Brand</label>
    <type>Checkbox</type>
</CustomField>