force-app/main/default/objects/Marketing_Activity__c/fields/Promo_Messages__c.field-meta.xml
<CustomField>
    <fullName>Promo_Messages__c</fullName>
    <inlineHelpText>e.g. Box1: New Opening hours, Box 2 : Fig 2</inlineHelpText>
    <label>Promo Messages</label>
    <type>TextArea</type>
</CustomField>