force-app/main/default/objects/Marketing_Activity__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>image(&apos;http://qrickit.com/api/qr.php?d=&apos;+x18_digit_ID__c+&apos;&amp;addtext=&apos;+Marketing_Activity_Ref__c+&apos;&amp;txtcolor=000000&amp;fgdcolor=000000&amp;bgdcolor=FFFFFF&amp;qrsize=300&apos;,&apos;image&apos;) 

/*IMAGE(&apos;https://chart.googleapis.com/chart?chs=300x300&amp;cht=qr&amp;chl=&apos;+ x18_digit_ID__c , &apos;QR Code&apos; )*/</formula>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>