force-app/main/default/objects/Marketing_Activity__c/fields/Query_Field__c.field-meta.xml
<CustomField>
    <fullName>Query_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Query Field</label>
    <type>Checkbox</type>
</CustomField>