force-app/main/default/objects/Marketing_Activity__c/fields/Re_send_to_Oracle_for_NewActivity__c.field-meta.xml
<CustomField>
    <fullName>Re_send_to_Oracle_for_NewActivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Re-send to Oracle</label>
    <type>Checkbox</type>
</CustomField>