force-app/main/default/objects/Marketing_Activity__c/fields/Reason_for_Removal_or_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Removal_or_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <type>TextArea</type>
</CustomField>