force-app/main/default/objects/Marketing_Activity__c/fields/Response_Description__c.field-meta.xml
<CustomField>
    <fullName>Response_Description__c</fullName>
    <inlineHelpText>How will the target audience respond?  Phone, website registration?  Do we need a data capture system or other response mechanism?</inlineHelpText>
    <label>Response Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>