force-app/main/default/objects/Marketing_Activity__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Marketing_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>