force-app/main/default/objects/Marketing_Activity__c/fields/Responsys_ID__c.field-meta.xml
<CustomField>
    <fullName>Responsys_ID__c</fullName>
    <externalId>true</externalId>
    <label>Responsys ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>