force-app/main/default/objects/Marketing_Activity__c/fields/Responsys_ID_Entered__c.field-meta.xml
<CustomField>
    <fullName>Responsys_ID_Entered__c</fullName>
    <inlineHelpText>Please confirm you have entered a Responsys ID into Responsys</inlineHelpText>
    <label>Responsys ID Entered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>