force-app/main/default/objects/Marketing_Activity__c/fields/Search_ID__c.field-meta.xml
<CustomField>
    <fullName>Search_ID__c</fullName>
    <externalId>true</externalId>
    <label>Search ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>