force-app/main/default/objects/Marketing_Activity__c/fields/Search_Keywords__c.field-meta.xml
<CustomField>
    <fullName>Search_Keywords__c</fullName>
    <description>On migration some redeemable campaigns were merged into one (groupx9 into one activity) This field provides a space to enter ALL the old campaign IDs (701...)</description>
    <label>Search Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>