force-app/main/default/objects/Marketing_Activity__c/fields/Segment_Name__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name__c</fullName>
    <description>..</description>
    <label>Segment Name</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Star</fullName>
            </value>
            <value>
                <fullName>Two Star</fullName>
            </value>
            <value>
                <fullName>Three Star</fullName>
            </value>
            <value>
                <fullName>Four Star</fullName>
            </value>
            <value>
                <fullName>Five Star</fullName>
            </value>
            <value>
                <fullName>Six Star</fullName>
            </value>
            <value>
                <fullName>Seven Star</fullName>
            </value>
            <value>
                <fullName>Eight Star</fullName>
            </value>
            <value>
                <fullName>Nine Star</fullName>
            </value>
            <value>
                <fullName>Ten Star</fullName>
            </value>
            <value>
                <fullName>Eleven Star</fullName>
            </value>
            <value>
                <fullName>Twelve Star</fullName>
            </value>
            <value>
                <fullName>0. Zero Spend</fullName>
                <isActive>false</isActive>
                <label>0. Zero Spend</label>
            </value>
            <value>
                <fullName>1. Ultra-Low Spend</fullName>
                <isActive>false</isActive>
                <label>1. Ultra-Low Spend</label>
            </value>
            <value>
                <fullName>10. Ultra-High Spend</fullName>
                <isActive>false</isActive>
                <label>10. Ultra-High Spend</label>
            </value>
            <value>
                <fullName>11. Hyper High Spend</fullName>
                <isActive>false</isActive>
                <label>11. Hyper High Spend</label>
            </value>
            <value>
                <fullName>2. Low Spend</fullName>
                <isActive>false</isActive>
                <label>2. Low Spend</label>
            </value>
            <value>
                <fullName>3. Mediocre Spend</fullName>
                <isActive>false</isActive>
                <label>3. Mediocre Spend</label>
            </value>
            <value>
                <fullName>4. Moderate Spend</fullName>
                <isActive>false</isActive>
                <label>4. Moderate Spend</label>
            </value>
            <value>
                <fullName>5. Medium Spend</fullName>
                <isActive>false</isActive>
                <label>5. Medium Spend</label>
            </value>
            <value>
                <fullName>6. Nearly High Spend</fullName>
                <isActive>false</isActive>
                <label>6. Nearly High Spend</label>
            </value>
            <value>
                <fullName>7. High Spend</fullName>
                <isActive>false</isActive>
                <label>7. High Spend</label>
            </value>
            <value>
                <fullName>8. Very High Spend</fullName>
                <isActive>false</isActive>
                <label>8. Very High Spend</label>
            </value>
            <value>
                <fullName>9. Super High Spend</fullName>
                <isActive>false</isActive>
                <label>9. Super High Spend</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>