force-app/main/default/objects/Marketing_Activity__c/fields/Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Segmentation__c</fullName>
    <description>New PICKLIST field created to replace the old MULTIPICKLIST Segmentation field</description>
    <label>Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Audience_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member - Tier 1  (Low Spend)</fullName>
            </value>
            <value>
                <fullName>Member - Tier 2 (Medium Spend)</fullName>
            </value>
            <value>
                <fullName>Member - Tier 3 (High Spend)</fullName>
            </value>
            <value>
                <fullName>Non-Member Low Spend</fullName>
            </value>
            <value>
                <fullName>Non-Member Medium Spend</fullName>
            </value>
            <value>
                <fullName>Non-Member High Spend</fullName>
            </value>
            <value>
                <fullName>Member Private Client Services</fullName>
            </value>
            <value>
                <fullName>Non-Member Private Client Services</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>1. Luxury Experience Seekers</fullName>
                <isActive>false</isActive>
                <label>1. Luxury Experience Seekers</label>
            </value>
            <value>
                <fullName>2. Savvy Brand Loyalists</fullName>
                <isActive>false</isActive>
                <label>2. Savvy Brand Loyalists</label>
            </value>
            <value>
                <fullName>3. Authentic Brand Seekers</fullName>
                <isActive>false</isActive>
                <label>3. Authentic Brand Seekers</label>
            </value>
            <value>
                <fullName>3. Authentic Brand Seekers]</fullName>
                <isActive>false</isActive>
                <label>3. Authentic Brand Seekers]</label>
            </value>
            <value>
                <fullName>4. Casual Shoppers</fullName>
                <isActive>false</isActive>
                <label>4. Casual Shoppers</label>
            </value>
            <value>
                <fullName>4. Casual Shoppers]</fullName>
                <isActive>false</isActive>
                <label>4. Casual Shoppers]</label>
            </value>
            <value>
                <fullName>5. Escape to the Village</fullName>
                <isActive>false</isActive>
                <label>5. Escape to the Village</label>
            </value>
            <value>
                <fullName>5. Escape to the Village]</fullName>
                <isActive>false</isActive>
                <label>5. Escape to the Village]</label>
            </value>
            <value>
                <fullName>6. Limited Spenders</fullName>
                <isActive>false</isActive>
                <label>6. Limited Spenders</label>
            </value>
            <value>
                <fullName>6. Limited Spenders]</fullName>
                <isActive>false</isActive>
                <label>6. Limited Spenders]</label>
            </value>
            <value>
                <fullName>Blue</fullName>
                <isActive>false</isActive>
                <label>Blue</label>
            </value>
            <value>
                <fullName>Gold</fullName>
                <isActive>false</isActive>
                <label>Gold</label>
            </value>
            <value>
                <fullName>Green</fullName>
                <isActive>false</isActive>
                <label>Green</label>
            </value>
            <value>
                <fullName>Orange</fullName>
                <isActive>false</isActive>
                <label>Orange</label>
            </value>
            <value>
                <fullName>Pink</fullName>
                <isActive>false</isActive>
                <label>Pink</label>
            </value>
            <value>
                <fullName>Purple</fullName>
                <isActive>false</isActive>
                <label>Purple</label>
            </value>
            <value>
                <fullName>Teal</fullName>
                <isActive>false</isActive>
                <label>Teal</label>
            </value>
            <value>
                <fullName>[1. Luxury Experience Seekers</fullName>
                <isActive>false</isActive>
                <label>[1. Luxury Experience Seekers</label>
            </value>
            <value>
                <fullName>[2. Savvy Brand Loyalists</fullName>
                <isActive>false</isActive>
                <label>[2. Savvy Brand Loyalists</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>